assets/preset1_hart.css
/* ... */
.dropdown-lgeo {
  width: 400px;
  display: inline-block;
  padding-right: 30px;
  padding-bottom: 10px;
  padding-top: 20px;
}

/* .scale-buttons-lgeo {
  width: 100%;
  display: inline;
  padding-bottom: 5px;
  padding-top: 5px;

} */

.scale-button-box-lgeo {
  /* width: 100%; */
  display: block;
  padding-bottom: 5px;
  padding-top: 5px;
  float: left;

}

.region-button-box-lgeo {
  /* width: 280px; */
  display: inline-block;
  padding-right: 10px;
  padding-top: 1%;
}

.region-button-lgeo {
  width: 270px;
  /* display: inline-block;
  padding-right: 10px;
  padding-top: 1%; */
}


.reset-button-lgeo {
  /* width: 100%; */
  display: block;
  /* padding-bottom: 20px; */
  padding-top: 10px;

}




.map-lgeo {
  /* width: 100%;  */
  display: inline;
}

.map-area-box-lgeo {
  display: inline-block;

}

@media (max-width: 500px) {
  .map-area-box-lgeo  {
    width: 300px;
    height: 100px;
    display: inline-block;
  }

  .dropdown-lgeo {
    width: 330px;
    display: inline-block;
    padding-right: 30px;
    padding-bottom: 10px;
    padding-top: 20px;
  }
}


@media (min-width: 500px) {
  .map-area-box-lgeo  {
    width: 1000px;
    height: 500px;
    display: inline-block;
  }

  .dropdown-lgeo {
    width: 400px;
    display: inline-block;
    padding-right: 30px;
    padding-bottom: 10px;
    padding-top: 20px;
  }
}

.pg2-table-lgeo {
  /* width: 80%; */
  padding-top: 30px;
  padding-bottom: 30px;
}


/* .pg2-plot-lgeo {
  width: 80%;
  display: inline-block;
} */


.pg2-plot-lgeo {
  /* width: 90%; */
  display: block;
  padding-top: 1%;
}

.pg2-table-plot-box-lgeo {
  /* width: 90%; */
  display: inline-block;
  /* padding-top: 1%; */
}

.pg3-plot-lgeo {
  /* width: 90%; */
  display: block;
  padding-top: 1%;
}

.pg3-table-lgeo {
  /* width: 90%; */
  padding-bottom: 1.5%;
}

.pg3-table-plot-box-lgeo {
  /* width: 90%; */
  display: inline-block;
  /* padding-top: 1%; */
}

/* .pg3-table-plot-box-lgeo {
  width: 100%;
  display: inline-block;
  padding-bottom: 1%;
} */

.muni-reg-text-lgeo{
  width: 90%;
  padding-bottom: 1%;
}

.export{
  margin-bottom: 5%;
}



.tables {
  padding-bottom: 1%;
  padding-top: 1%;
}

span.column-header--sort {
  display: none;
}

/* 
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* For devices larger than 400px */
@media (min-width: 400px) {
  .container {
    width: 85%;
    padding: 0; }
}

/* For devices larger than 550px */
@media (min-width: 550px) {
  .container {
    width: 80%; }
  .column,
  .columns {
    margin-left: 4%; }
  .column:first-child,
  .columns:first-child {
    margin-left: 0; }

  .one.column,
  .one.columns                    { width: 4.66666666667%; }
  .two.columns                    { width: 13.3333333333%; }
  .three.columns                  { width: 22%;            }
  .four.columns                   { width: 30.6666666667%; }
  .five.columns                   { width: 39.3333333333%; }
  .six.columns                    { width: 48%;            }
  .seven.columns                  { width: 56.6666666667%; }
  .eight.columns                  { width: 65.3333333333%; }
  .nine.columns                   { width: 74.0%;          }
  .ten.columns                    { width: 82.6666666667%; }
  .eleven.columns                 { width: 91.3333333333%; }
  .twelve.columns                 { width: 100%; margin-left: 0; }

  .one-third.column               { width: 30.6666666667%; }
  .two-thirds.column              { width: 65.3333333333%; }

  .one-half.column                { width: 48%; }

  /* Offsets */
  .offset-by-one.column,
  .offset-by-one.columns          { margin-left: 8.66666666667%; }
  .offset-by-two.column,
  .offset-by-two.columns          { margin-left: 17.3333333333%; }
  .offset-by-three.column,
  .offset-by-three.columns        { margin-left: 26%;            }
  .offset-by-four.column,
  .offset-by-four.columns         { margin-left: 34.6666666667%; }
  .offset-by-five.column,
  .offset-by-five.columns         { margin-left: 43.3333333333%; }
  .offset-by-six.column,
  .offset-by-six.columns          { margin-left: 52%;            }
  .offset-by-seven.column,
  .offset-by-seven.columns        { margin-left: 60.6666666667%; }
  .offset-by-eight.column,
  .offset-by-eight.columns        { margin-left: 69.3333333333%; }
  .offset-by-nine.column,
  .offset-by-nine.columns         { margin-left: 78.0%;          }
  .offset-by-ten.column,
  .offset-by-ten.columns          { margin-left: 86.6666666667%; }
  .offset-by-eleven.column,
  .offset-by-eleven.columns       { margin-left: 95.3333333333%; }

  .offset-by-one-third.column,
  .offset-by-one-third.columns    { margin-left: 34.6666666667%; }
  .offset-by-two-thirds.column,
  .offset-by-two-thirds.columns   { margin-left: 69.3333333333%; }

  .offset-by-one-half.column,
  .offset-by-one-half.columns     { margin-left: 52%; }

}

/* Fonts
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* @import url('https://fonts.cdnfonts.com/css/bahnschrift'); */

@font-face{
  font-family:bahnschrift;
  font-style:normal;
  font-weight:400;
  src:local('Bahnschrift'),url('https://fonts.cdnfonts.com/s/21353/BAHNSCHRIFT 1.woff') format('woff')}
  
@font-face{
  font-family:bahnschrift;
  font-style:normal;
  font-weight:400;
  src:local('Bahnschrift'),url('https://fonts.cdnfonts.com/s/21353/BAHNSCHRIFT 10.woff') format('woff')}

@font-face{
  font-family:bahnschrift;
  font-style:normal;
  font-weight:400;
  src:local('Bahnschrift'),url('https://fonts.cdnfonts.com/s/21353/BAHNSCHRIFT 11.woff') format('woff')}

@font-face{
  font-family:bahnschrift;
  font-style:normal;
  font-weight:400;
  src:local('Bahnschrift'),url('https://fonts.cdnfonts.com/s/21353/BAHNSCHRIFT 12.woff') format('woff')}

@font-face{
  font-family:bahnschrift;
  font-style:normal;
  font-weight:400;
  src:local('Bahnschrift'),url('https://fonts.cdnfonts.com/s/21353/BAHNSCHRIFT 13.woff') format('woff')}
/* ... */

